# pdfiberdrola

./: .gitignore  LICENSE  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/config/: __init__.py  config.py
app/core/: highlighter.py  layout.py  mv.py  pdfs.py  preventive.py
app/gui/: main_window.py  window.py
app/model/: layout.py  parser.py  pdfs.py
app/utils/: __init__.py  excel.py  files.py  format.py  loggers.py  paths.py  pdf.py  pdfs.py  types.py
app/utils/callables/: decorators.py  entry_points.py  meta_mixin.py
config/: .env  logging.json
resources/: config.txt  main_window.ui  nsis-setup.nsi
resources/gui/: memento.json
resources/installer/: config.txt  inspetrio-innosetup.iss  manifest.xml  nsis-setup.nsi  version_sync.py
resources/templates/: excel_data.xlsx
resources/ui/: memento.json
scripts/: generate_ui.bat  package.bat  setup-dev.bat  version_sync.py
templates/: blank_template.xlsx
templates/pdfs/: excel_template.xlsx
tests/: __init__.py
tests/inspetrio/model/: layout.py
